Image Overflow functionality fix

--- a/clones/door-dash/css/tablet.css
+++ b/clones/door-dash/css/tablet.css
@@ -140,7 +140,11 @@
         justify-content: space-evenly;
         align-items: center;
         background-color: #ffffff;
-        padding: 30px;
+        /* padding: 30px; */
+    }
+
+    .gallery-item-2 {
+        background-color: var(--content-background);
     }
 
     .gallery-item .gallery-item-text {
@@ -154,12 +158,6 @@
         overflow-y: visible;
     }
 
-    .gallery-item-image :nth-child(2) {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-
     .gallery-item-image :nth-child(1) {
         display: none;
     }
@@ -167,6 +165,18 @@
     .gallery-item-image :nth-child(2) {
         display: block;
         min-width: 300px;
+    }
+
+    .gallery-item-1 img {
+        height: 550px;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .gallery-item-2 img {
+        height: 500px;
+        width: 100%;
+        object-fit: cover;
     }
 
     .gallery-item h2 {
@@ -226,13 +236,6 @@
         padding: 30px;
     }
 
-    .convenience-desktop {
-        display: block;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-
     .convenience-mobile {
         display: none;
     }
@@ -265,7 +268,15 @@
         height: 500px;
         width: 50%;
         margin-left: 50px;
+        margin-top: 50px;
         overflow-y: visible;
+    }
+
+    .convenience-desktop {
+        display: block;
+        height: 550px;
+        width: 100%;
+        object-fit: cover;
     }
 
     .convenience-text button {
@@ -278,7 +289,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 40px;
-        margin-top: 30px;
+        margin-top: 0px;
         overflow-x: hidden;
         padding: 10px;
         text-align: center;
@@ -301,13 +312,16 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-top: -100px;
     }
 
     #services h2 {
-        max-width: 40%;
+        max-width: 50%;
         font-size: 36px;
         font-family: 'TTNorms-Bold';
         text-align: center;
+        margin-top: 100px;
+        margin-bottom: 50px;
     }
 
     .services-wrapper .service-text {
@@ -357,15 +371,18 @@
         flex-direction: row-reverse;
         background-color: #ffffff;
         justify-content: space-evenly;
+        margin-top: 50px;
     }
 
     .opportunity-child .opportunity-image-wrapper {
         height: 500px;
+        overflow-y: visible;
     }
 
     .opportunity-image-desktop {
-        height: 100%;
+        height: 550px;
         object-fit: cover;
+        z-index: 1;
     }
 
     .opportunity-text {
@@ -393,12 +410,17 @@
         font-size: 18px;
     }
 
+    .business-signup {
+        margin-top: -50px;
+    }
+
     .business-service-image-mobile {
         display: none;
     }
 
     .business-service {
         display: flex;
+        margin-top: 100px;
     }
 
     .business-sevice-image-wrapper {
